--- a/kubernetesfile.yml
+++ b/kubernetesfile.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: insurance
-          image: vikuldocker/insurance-monday:latest
+          image: himanshutha/myimage:latest
           ports:
             - containerPort: 8081
           env:
